--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
     <array>
-        <string>applinks:bugheist.com</string>
+        <string>applinks:blt.owasp.org/</string>
     </array>
 </dict>
 <dict>
