--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
-project(bugheist_flutter LANGUAGES CXX)
+project(blt_flutter LANGUAGES CXX)
 
-set(BINARY_NAME "bugheist_flutter")
+set(BINARY_NAME "blt_flutter")
 
 cmake_policy(SET CMP0063 NEW)
 
