--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.apps" "\0"
-            VALUE "FileDescription", "bugheist_flutter" "\0"
+            VALUE "FileDescription", "blt_flutter" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "bugheist_flutter" "\0"
+            VALUE "InternalName", "blt_flutter" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.apps. All rights reserved." "\0"
-            VALUE "OriginalFilename", "bugheist_flutter.exe" "\0"
-            VALUE "ProductName", "bugheist_flutter" "\0"
+            VALUE "OriginalFilename", "blt_flutter.exe" "\0"
+            VALUE "ProductName", "blt_flutter" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
